--- a/vars/zfs_zdata.yml
+++ b/vars/zfs_zdata.yml
@@ -4,24 +4,29 @@ zdata_sets:
   - name: data
     owner: root
     group: root
-    mode: '0755'
+    mode: '0555'
     properties:
       compression: 'lz4'
       mountpoint: '/data'
       sharenfs: off
+      sharesmb: off
   - name: homes
     owner: root
     group: root
-    mode: '0755'
+    mode: '0555'
     properties:
       compression: 'lz4'
       mountpoint: '/homes'
       sharenfs: off
+      sharesmb: off
+      setuid: off
   - name: share
     owner: root
-    group: root
-    mode: '0755'
+    group: share
+    mode: '0555'
     properties:
       compression: 'lz4'
       mountpoint: '/share'
       sharenfs: off
+      sharesmb: off
+      setuid: off
